add icon app, add segmentControl, Search to contacts, fix corner button dialer, service , add Setting VC

--- a/Pcaller/Info.plist
+++ b/Pcaller/Info.plist
@@ -3,7 +3,7 @@
 <plist version="1.0">
 <dict>
 	<key>NSContactsUsageDescription</key>
-	<string>fdasfdsaf</string>
+	<string>Allow to see your contacts and make private calls faster</string>
 	<key>UIApplicationSceneManifest</key>
 	<dict>
 		<key>UIApplicationSupportsMultipleScenes</key>
